--- a/index.html
+++ b/index.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Caratrent</title>
+  <meta property="og:title" content="Caratrent">
+<meta property="og:description" content="Wohnmobile & Camper mieten – Caratrent.de">
+<meta property="og:image" content="https://www.caratrent.de/CaratRent.jpg">
+<meta property="og:url" content="https://www.caratrent.de">
+<meta property="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body style="margin:0;display:flex;align-items:center;justify-content:center;min-height:100vh;background:#000;">
