--- a/index.html
+++ b/index.html
@@ -3,14 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <title>Caratrent</title>
-  <meta property="og:title" content="Caratrent">
-<meta property="og:description" content="Wohnmobile & Camper mieten – Caratrent.de">
-<meta property="og:image" content="https://www.caratrent.de/CaratRent.jpg">
-<meta property="og:url" content="https://www.caratrent.de">
-<meta property="og:type" content="website">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <!-- Open Graph Tags für WhatsApp / Facebook -->
+  <meta property="og:title" content="Caratrent – Wohnmobile & Camper mieten">
+  <meta property="og:description" content="Dein nächstes Abenteuer auf vier Rädern. Jetzt bei Caratrent.de.">
+  <meta property="og:image" content="https://www.caratrent.de/CaratRent.jpg">
+  <meta property="og:url" content="https://www.caratrent.de">
+  <meta property="og:type" content="website">
+
+  <!-- Optional für WhatsApp / iMessage -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Caratrent – Wohnmobile & Camper mieten">
+  <meta name="twitter:description" content="Dein nächstes Abenteuer auf vier Rädern. Jetzt bei Caratrent.de.">
+  <meta name="twitter:image" content="https://www.caratrent.de/CaratRent.jpg">
 </head>
-<body style="margin:0;display:flex;align-items:center;justify-content:center;min-height:100vh;background:#000;">
-  <img src="CaratRent.jpg" alt="Caratrent" style="max-width:100%;height:auto;">
+<body style="margin:0;display:flex;align-items:center;justify-content:center;height:100vh;background:#000;">
+  <img src="CaratRent.jpg" alt="Caratrent Logo" style="max-width:100%;height:auto;">
 </body>
 </html>
