--- a/index.html
+++ b/index.html
@@ -2,23 +2,26 @@
 <html lang="de">
 <head>
   <meta charset="UTF-8">
-  <title>Caratrent</title>
+  <title>CARAT RENT – die Sportwagenvermietung</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-  <!-- Open Graph Tags für WhatsApp / Facebook -->
-  <meta property="og:title" content="Caratrent – Wohnmobile & Camper mieten">
-  <meta property="og:description" content="Dein nächstes Abenteuer auf vier Rädern. Jetzt bei Caratrent.de.">
+  <!-- Open Graph (Vorschau für WhatsApp, Instagram, Facebook etc.) -->
+  <meta property="og:locale" content="de_DE">
+  <meta property="og:site_name" content="CARAT RENT">
+  <meta property="og:title" content="CARAT RENT Autovermietung">
+  <meta property="og:description" content="Besuche unsere Instagramseite unter @CARAT.RENT">
   <meta property="og:image" content="https://www.caratrent.de/CaratRent.jpg">
   <meta property="og:url" content="https://www.caratrent.de">
   <meta property="og:type" content="website">
 
-  <!-- Optional für WhatsApp / iMessage -->
+  <!-- Vorschau für Twitter / iMessage -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:title" content="Caratrent – Wohnmobile & Camper mieten">
-  <meta name="twitter:description" content="Dein nächstes Abenteuer auf vier Rädern. Jetzt bei Caratrent.de.">
+  <meta name="twitter:title" content="CARAT RENT Autovermietung">
+  <meta name="twitter:description" content="Besuche unsere Instagramseite unter @CARAT.RENT">
   <meta name="twitter:image" content="https://www.caratrent.de/CaratRent.jpg">
 </head>
-<body style="margin:0;display:flex;align-items:center;justify-content:center;height:100vh;background:#000;">
-  <img src="CaratRent.jpg" alt="Caratrent Logo" style="max-width:100%;height:auto;">
+
+<body style="margin:0;display:flex;align-items:center;justify-content:center;min-height:100vh;background:#000;">
+  <img src="CaratRent.jpg" alt="CARAT RENT Logo" style="max-width:100%;height:auto;">
 </body>
 </html>
